# tudelft-cg

billboard-cloud/: CMakeLists.txt
billboard-cloud/framework/include/framework/: mesh.h
billboard-cloud/framework/src/: image.cpp  mesh.cpp
billboard-cloud/resources/: dragon3.mtl
billboard-cloud/shaders/: obj_shader_frag.glsl  obj_shader_vert.glsl  plane_shader_frag.glsl  plane_shader_vert.glsl
billboard-cloud/src/: camera.cpp  main.cpp
cpp_introduction/: CMakeLists.txt
final-project/: CMakeLists.txt
final-project/framework/include/framework/: image.h  mesh.h  shader.h
final-project/framework/src/: shader.cpp  window.cpp
final-project/resources/dungeon/: dungeon.mtl  practical2.blend  practical2.blend1
final-project/shaders/: shader_frag.glsl  shader_vert.glsl  shadow_vert.glsl
final-project/src/: application.cpp  boss.cpp  boss.h  camera.cpp  camera.h  entity.cpp  entity.h  gameobject.cpp  gameobject.h  mesh.cpp  mesh.h  model.cpp  model.h  mousepicker.cpp  mousepicker.h  node.h  player.cpp  player.h  shadowmap.cpp  shadowmap.h  texture.cpp  texture.h  transform.cpp  transform.h  utility.h
final-project/src/include/: entity.h  player.h
practical1/: CMakeLists.txt
practical1/framework/: CMakeLists.txt
practical1/framework/src/: mesh.cpp
practical1/src/: main.cpp
practical2/models/: 01_bird_mesh.blend  02_bird_rigged.blend  03_bird_rigged_and_weighted.blend  04_bird_animated.blend
practical3/shaders/: blinn_phong_frag.glsl  debug_frag.glsl  lambert_frag.glsl  light_frag.glsl  light_vertex.glsl  phong_frag.glsl  toon_diffuse_frag.glsl  toon_specular_frag.glsl  vertex.glsl  xtoon_frag.glsl
practical3/src/: main.cpp
practical4/: CMakeLists.txt  README.html
practical4/framework/include/framework/: opengl_includes.h
practical4/resources/: scene.mtl
practical4/shaders/: shader_frag.glsl
practical4/src/: main.cpp
